# tse

./: .gitignore  CMakeLists.txt  README.md
include/: CMakeLists.txt
include/filemanager/: tse.cpp
include/tse/: tse.cpp  tse.h
include/ui/: CMakeLists.txt  ui.cpp  ui.h
src/: main.cpp
